--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -99,6 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Classe\classeEntregaFornecedor.cs" />
     <Compile Include="Model\Classe\classeNivelAcesso.cs" />
     <Compile Include="Model\Classe\classeOpcaoAcesso.cs" />
     <Compile Include="Model\Classe\classePessoa.cs" />
@@ -109,6 +110,7 @@
     <Compile Include="Model\Classe\ClasseVeiculoMarca.cs" />
     <Compile Include="Model\Classe\ClasseVeiculoPessoa.cs" />
     <Compile Include="Model\Classe\classeVisitantes.cs" />
+    <Compile Include="Model\Conexão\dbEntregaFornecedor.cs" />
     <Compile Include="Model\Conexão\dbFuncionario.cs" />
     <Compile Include="Model\Classe\classeFornecedor.cs" />
     <Compile Include="Model\Classe\ClasseCondominioEmpresa.cs" />
@@ -141,6 +143,12 @@
     </Compile>
     <Compile Include="View\frmEmpresa.designer.cs">
       <DependentUpon>frmEmpresa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\frmEntregasFornecedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmEntregasFornecedor.Designer.cs">
+      <DependentUpon>frmEntregasFornecedor.cs</DependentUpon>
     </Compile>
     <Compile Include="View\frmNivelAcesso.cs">
       <SubType>Form</SubType>
@@ -336,6 +344,9 @@
     </Compile>
     <EmbeddedResource Include="View\frmEmpresa.resx">
       <DependentUpon>frmEmpresa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\frmEntregasFornecedor.resx">
+      <DependentUpon>frmEntregasFornecedor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\frmNivelAcesso.resx">
       <DependentUpon>frmNivelAcesso.cs</DependentUpon>
