--- a/Projeto_LPRC5/Projeto_LPRC5.csproj
+++ b/Projeto_LPRC5/Projeto_LPRC5.csproj
@@ -128,6 +128,8 @@
     <Compile Include="Model\Conexão\dbPessoa.cs" />
     <Compile Include="Model\Conexão\dbPessoaFisica.cs" />
     <Compile Include="Model\Conexão\dbPessoaJuridica.cs" />
+    <Compile Include="Model\Conexão\dbPrestador.cs" />
+    <Compile Include="Model\Conexão\dbTipoVisitante.cs" />
     <Compile Include="Model\Conexão\DbVeiculo.cs" />
     <Compile Include="Model\Conexão\DbVeiculoMarca.cs" />
     <Compile Include="Model\Conexão\DbVeiculoPessoa.cs" />
